Fixes text overflow on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -78,7 +78,7 @@ body
 
 .point .text
 {
-    position: absolute;
+    position: fixed;
     top: 30px;
     left: -120px;
     width: 200px;
@@ -93,8 +93,6 @@ body
     font-size: 14px;
     opacity: 0;
     transition: opacity 0.3s;
-    overflow: hidden;
-    text-overflow: clip;
 
     pointer-events: none;
 }
